# Chatbots

1_Q&Achatbot/: app.py  requirements.txt
chatbotWithMessageHistory/: .gitignore  requirements.txt
chatbotWithMessageHistory/chatbotRecallHistory/: bot.ipynb
chatbotWithMessageHistory/conversationqa/: conversation_chatbot.ipynb
chatbotWithMessageHistory/vectorStoresAndRetrievers/: vectorRetriever.ipynb
rag_document_qa_groq_api/: .gitignore  end_to_endConversationalChatbot.py  main.py  pyproject.toml  requirements.txt
searchContextInWebContent/: readme.md  requirements.txt
searchContextInWebContent/searchContextInContent/: ollama.ipynb
search_engine_with_tools_and_agents/: .gitignore  app.py  hybrid.py  main.ipynb  rag_with_agentic.py  rag_with_agentic_history.py  requirements.txt
simplellmLECL/: requirements.txt
simplellmLECL/chatApplication/: serve.py  simple_llm_lecl.ipynb
